--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "description": "En esta actividad vamos a repasar los conceptos básicos de la creación de aplicaciones complejas con ExpressJS, así como los diferentes métodos de interacción sobre bases de datos relacionales con MySQL.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
